apps/media/seerr/deployment.yaml
#
# Reference:
# https://github.com/seerr-team/seerr
#

apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: seerr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: seerr
  type: ClusterIP
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: seerr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: seerr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      securityContext:
        fsGroup: 1000
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0 # {"$imagepolicy": "media:seerr"}
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: seerr-pvc
              mountPath: /app/config
      volumes:
        - name: seerr-pvc
          persistentVolumeClaim:
            claimName: seerr-pvc
