apps/media/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`requests.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: seerr
          port: http
